--- a/www/css/style.css
+++ b/www/css/style.css
@@ -86,3 +86,9 @@ ul.plain {
 a.name, a.name:visited, a.name:hover {
 	color: black;
 }
+
+.business-card {
+	padding: 0px;
+	border-radius: 2px;
+	box-shadow: 10px 10px 5px #888888;
+}
